--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,11 @@
 spring:
   application:
-    name: oTUSHighloadArchitect
+    name: otus-sotset
 
-  jackson:
-    serialization:
-      WRITE_DATES_AS_TIMESTAMPS: false
+  datasource:
+    url: jdbc:mysql://localhost:3306/sotset
+    username: root
+    password: password
 
 server:
   port: 8080
