--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: ddl/user.sql
       relativeToChangelogFile: true
+  - include:
+      file: ddl/friend.sql
+      relativeToChangelogFile: true
