--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: ddl/friend.sql
       relativeToChangelogFile: true
+  - include:
+      file: ddl/post.sql
+      relativeToChangelogFile: true
