--- a/_docker/docker-compose.yml
+++ b/_docker/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     depends_on:
       - postgres-master
       - postgres-slave-1
+      - redis
     environment:
       - SPRING_MASTER_DATASOURCE_JDBC_URL=jdbc:postgresql://postgres-master:5432/sotset
       - SPRING_SLAVE_DATASOURCE_JDBC_URL=jdbc:postgresql://postgres-slave-1:5432/sotset
@@ -50,6 +51,11 @@ services:
       "
     ports:
       - "5433:5432"
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
 
   prometheus:
     image: prom/prometheus
