--- a/_docker/docker-compose.yml
+++ b/_docker/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       - SPRING_MASTER_DATASOURCE_JDBC_URL=jdbc:postgresql://postgres-master:5432/sotset
       - SPRING_SLAVE_DATASOURCE_JDBC_URL=jdbc:postgresql://postgres-slave-1:5432/sotset
+      - SPRING_DATA_REDIS_URL=redis://redis:6379
 
   postgres-master:
     image: postgres
